[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/full_map.gd" id="1_fullmap"]

[node name="FullMap" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fullmap")

[node name="MapContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SystemName" type="Label" parent="MapContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 50.0
offset_right = 300.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.99, 0.85, 0.53, 1)
theme_override_font_sizes/font_size = 20
text = "Solar System"
horizontal_alignment = 1

[node name="Coordinates" type="Label" parent="MapContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.55, 0.55, 0.55, 1)
theme_override_font_sizes/font_size = 14
text = "Position: 0, 0"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="MapContainer"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 50.0
grow_horizontal = 0
text = "Close [M]"
